testsuite/tests/driver/T8959a.stderr

T8959a.hs:5:7: error: [GHC-83865]
    * Couldn't match expected type `Int -> Int' with actual type `()'
    * In the expression: ()
      In an equation for `foo': foo = ()
