testsuite/tests/driver/T8959a.hs
{-# LANGUAGE UnicodeSyntax #-}
module T8959a where

foo :: Int -> Int
foo = ()
